--- a/cuba-login.html
+++ b/cuba-login.html
@@ -78,10 +78,10 @@
       submit: function() {
         this.app.login(this.username, this.password).then(
             function(resp) {
-              this.fire('cuba-login-success');
+              this.fire('cuba-login-success', {response: resp});
             }.bind(this),
-            function(error) {
-              this.fire('cuba-login-error', error);
+            function(errResp) {
+              this.fire('cuba-login-error', {errorResponse: errResp});
             }.bind(this)
         );
       }
